# bazel_polyglot_prototypes

bazel_federation/: .gitignore  WORKSPACE
bazel_federation/myapp/: BUILD.bazel  HelloTest.java  Main.java
cc_basics/: .gitignore  WORKSPACE
cc_basics/myapp/: BUILD.bazel  hello.cpp  hello.hpp  hello_test.cpp  main.cpp
cc_custom_openjdk_headers/: .gitignore  BUILD.bazel  WORKSPACE
cc_custom_openjdk_headers/bazel/: net_java_jdk13_linux_x64.BUILD.bazel
cc_openjdk_headers/: .gitignore  BUILD.bazel  WORKSPACE  hello_jvmti.cc
java_basics/: .gitignore  WORKSPACE
java_basics/myapp/: BUILD.bazel
java_toolchain_resolution/: .bazelrc  .gitignore  WORKSPACE
java_toolchain_resolution/bazel/: net_java_jdk13_linux_x64.BUILD.bazel
java_toolchain_resolution/myapp/: BUILD.bazel  Main.java
java_using_rules_java/: .gitignore  WORKSPACE
java_using_rules_java/myapp/: BUILD.bazel  Hello.java
rust_basics/: .gitignore  WORKSPACE
rust_basics/myapp/mybin/: BUILD.bazel  main.rs
rust_basics/myapp/mylib/: BUILD.bazel  lib.rs
rust_basics/myapp/mylib/mymod/: mod.rs
rust_bindgen/: .gitignore  WORKSPACE
rust_bindgen/my_cc_library/: BUILD.bazel  hello.cc  hello.hpp
rust_bindgen/my_rust_binary/: BUILD.bazel
rust_bindgen/my_rust_binary/src/: main.rs
rust_bindgen/my_rust_bindgen_library/: BUILD.bazel
rust_bindgen_jvmti/: .gitignore  WORKSPACE  local_libstdcpp_for_arch.bzl
rust_bindgen_jvmti/mycrate/: BUILD.bazel
rust_bindgen_jvmti/mycrate/src/: lib.rs
